--- a/src/pages/MainPage/MainPage.module.css
+++ b/src/pages/MainPage/MainPage.module.css
@@ -1,6 +1,5 @@
 .main {
   background: var(--bg);
-  position: absolute;
-  width: 100%;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
